# taxi-fare-mlops

./: .env.example  .gitignore  .pre-commit-config.yaml  CI_CD_ERROR_ANALYSIS.md  DATA_CLEANING_GUIDE.md  DAY10_CI_CD_PIPELINE.md  DAY10_COMPLETION_REPORT.md  DAY13_COMPLETION_REPORT.md  DAY13_FILES_INDEX.md  DAY13_INTEGRATION_TESTS.py  DAY13_QUICK_REFERENCE.md  DAY13_SETUP_COMPLETE.md  DAY1_COMPLETION_REPORT.md  DAY2_SUMMARY.md  DAY2_VERIFICATION.md  DAY3_COMPLETION_REPORT.md  DAY5_EXECUTIVE_SUMMARY.md  DAY5_PERFORMANCE_ANALYSIS.md  DAY6_COMPLETION_SUMMARY.md  DAY6_MLFLOW_OPTUNA_IMPLEMENTATION.md  DAY7_COMPLETION_REPORT.md  DAYS8and9_COMPLETION_REPORT.md  GITHUB_ACTIONS_MONITORING.md  GITHUB_ISSUES_CLI_AUTOCREATE.md  GITHUB_ISSUES_DAY_WISE_TEMPLATE.md  GITHUB_TOKEN_IMPLEMENTATION.md  INDEX_MONITORING.md  MLFLOW_COMPLETE_SETUP.md  MLFLOW_DOCUMENTATION_SUMMARY.txt  MLFLOW_FIX_SUMMARY.md  MLFLOW_QUICKSTART_GUIDE.md  MLOPS_IMPLEMENTATION_PLAN.md  MONITORING_COMPLETION_REPORT.md  MONITORING_IMPLEMENTATION_SUMMARY.md  Makefile  QUICK_START_MONITORING.md  README.md  Untitled 1.canvas  Untitled.canvas  WORKFLOW_FIXES_SUMMARY.md  (+24 more)
.obsidian/: graph.json  workspace.json
MD/: ALL_IMPROVEMENTS_IMPLEMENTATION_DETAILS.md  COMPLETE_IMPROVEMENTS_SUMMARY.md  COMPLETE_PENDING_IMPROVEMENT_TASKS.md  DATA_CLEANING_GUIDE.md  DAY11_COMPLETION_SUMMARY.md  DAY11_KUBERNETES_DEPLOYMENT.md  DAY11_STATUS_UPDATE.md  DAY1_COMPLETION_REPORT.md  DAY2_COMPLETION_REPORT.md  DAY2_STATUS.md  DAY2_SUMMARY.md  DAY4_COMPLETION_REPORT.md  DAY5_BOTTLENECK_DETAILS.md  DAY5_OPTIMIZATION_RESULTS.md  DAY5_QUICK_FIX_GUIDE.md  DAY6_COMPLETION_SUMMARY.md  DAY6_MLFLOW_OPTUNA_IMPLEMENTATION.md  DAY7_COMPLETION_REPORT.md  DAY7_MODEL_REGISTRY_GUIDE.md  DAYS8and9_GUIDE.md  DOCKER_MAKE_COMPLETE_SUMMARY.md  DOCKER_MAKE_FIX_SUMMARY.md  DOCKER_MAKE_IMPLEMENTATION.md  DOCKER_MAKE_SETUP.md  DOCUMENTATION_INDEX.md  GITHUB_ISSUES_CLI_MINIMAL.md  GITHUB_TOKEN_SETUP_GUIDE.md  HIGH_PRIORITY_IMPROVEMENTS_REPORT.md  IMPLEMENTATION_STATUS.md  IMPROVEMENTS_QUICK_REFERENCE.md  MEDIUM_PRIORITY_IMPROVEMENTS_REPORT.md  MLFLOW_COMPLETE_SETUP.md  MLFLOW_ERROR_ANALYSIS.md  MLFLOW_OPTUNA_INTEGRATION_GUIDE.md  MLFLOW_QUICKSTART_GUIDE.md  MLFLOW_VISUAL_GUIDE.md  MLOPS_IMPLEMENTATION_PLAN.md  PROJECT_ANALYSIS_REPORT.md  PROJECT_COMPLETE_STATUS.md  PROJECT_STATUS_DASHBOARD.md  (+4 more)
docker/: Dockerfile  docker-compose.yml
docs/: architecture.md
(+137 files in other folders)
